--- a/templates/website/base.html
+++ b/templates/website/base.html
@@ -26,9 +26,11 @@
     <link href="{% static 'website/css/vendors/themifi-icons.css' %}" rel="stylesheet" type="text/css">
     <link href="{% static 'website/css/vendors/bootstrap.css' %}" rel="stylesheet" type="text/css">
     <link href="{% static 'website/css/vendors/style.css' %}" rel="stylesheet" type="text/css">
+    <link href="{% static 'website/css/vendors/icons.css' %}" rel="stylesheet" type="text/css">
 </head>
 
 <body class="theme-color-1 dark">
+
 {% include 'website/include/header.html' %}
 {% block content %}
 
