--- a/templates/website/include/header.html
+++ b/templates/website/include/header.html
@@ -20,8 +20,8 @@
                             <li class="onhover-dropdown mobile-account">
                                 <i class="fa fa-user" aria-hidden="true"></i> My Account
                                 <ul class="onhover-show-div">
-                                    <li><a href="login.html">Login</a></li>
-                                    <li><a href="register.html">register</a></li>
+                                    <li><a href="{% url 'account_login' %}">Login</a></li>
+                                    <li><a href="{% url 'account_signup' %}">register</a></li>
                                 </ul>
                             </li>
                         </ul>
@@ -188,7 +188,7 @@
                                             <div class="mobile-back text-end">Back<i class="fa fa-angle-right ps-2" aria-hidden="true"></i></div>
                                         </li>
                                         <li><a href="index.html">Home</a></li>
-                                        <li><a href="index.html">Shop</a></li>
+                                        <li><a href="{% url 'website:shop' %}">Shop</a></li>
                                         <li><a href="index.html">Blogs</a></li>
                                         <li><a href="index.html">About Us</a></li>
                                         <li><a href="index.html">Contact Us</a></li>
