Design : Shop convert to store and link added

--- a/src/website/templates/website/home.html
+++ b/src/website/templates/website/home.html
@@ -17,9 +17,9 @@
                         <div>
                             <div style="width: 100%; display: inline-block;">
                                 <div class="home text-center p-center bg-size blur-up lazyloaded"
-                                     style="background-image: url('{% static 'website/img/background.jpg' %}'); background-size: cover; background-position: center center; display: block;">
+                                     style="background-image: url('{% static 'website/img/main.jpg' %}'); background-size: cover; background-position: center center; display: block;">
                                     <img alt="" class="bg-img blur-up lazyload"
-                                         src="{% static 'website/img/background.jpg' %}"
+                                         src="{% static 'website/img/main.jpg' %}"
                                          style="display: none;">
                                 </div>
                             </div>
@@ -30,9 +30,9 @@
                         <div>
                             <div style="width: 100%; display: inline-block;">
                                 <div class="home text-center p-center bg-size blur-up lazyloaded"
-                                     style="background-image: url('{% static 'website/img/background.jpg' %}'); background-size: cover; background-position: center center; display: block;">
+                                     style="background-image: url('{% static 'website/img/main.jpg' %}'); background-size: cover; background-position: center center; display: block;">
                                     <img alt="" class="bg-img blur-up lazyload"
-                                         src="{% static 'website/img/background.jpg' %}"
+                                         src="{% static 'website/img/main.jpg' %}"
                                          style="display: none;">
                                 </div>
                             </div>
@@ -43,9 +43,9 @@
                         <div>
                             <div style="width: 100%; display: inline-block;">
                                 <div class="home text-center p-center bg-size blur-up lazyloaded"
-                                     style="background-image: url('{% static 'website/img/background.jpg' %}'); background-size: cover; background-position: center center; display: block;">
+                                     style="background-image: url('{% static 'website/img/main.jpg' %}'); background-size: cover; background-position: center center; display: block;">
                                     <img alt="" class="bg-img blur-up lazyload"
-                                         src="{% static 'website/img/background.jpg' %}"
+                                         src="{% static 'website/img/main.jpg' %}"
                                          style="display: none;">
                                 </div>
                             </div>
@@ -56,9 +56,9 @@
                         <div>
                             <div style="width: 100%; display: inline-block;">
                                 <div class="home text-center p-center bg-size blur-up lazyloaded"
-                                     style="background-image: url('{% static 'website/img/background.jpg' %}'); background-size: cover; background-position: center center; display: block;">
+                                     style="background-image: url('{% static 'website/img/main.jpg' %}'); background-size: cover; background-position: center center; display: block;">
                                     <img alt="" class="bg-img blur-up lazyload"
-                                         src="{% static 'website/img/background.jpg' %}"
+                                         src="{% static 'website/img/main.jpg' %}"
                                          style="display: none;">
                                 </div>
                             </div>
@@ -69,8 +69,8 @@
                         <div>
                             <div style="width: 100%; display: inline-block;">
                                 <div class="home text-center p-center bg-size blur-up lazyload"
-                                     style="background-image: url('{% static 'website/img/background.jpg' %}'); background-size: cover; background-position: center center; display: block;">
-                                    <img alt="" class="bg-img blur-up lazyload" src="{% static 'website/img/1.jpg' %}"
+                                     style="background-image: url('{% static 'website/img/main.jpg' %}'); background-size: cover; background-position: center center; display: block;">
+                                    <img alt="" class="bg-img blur-up lazyload" src="{% static 'website/img/main.jpg' %}"
                                          style="display: none;">
                                 </div>
                             </div>
