--- a/templates/website/include/header.html
+++ b/templates/website/include/header.html
@@ -23,8 +23,8 @@
                                             <div class="mobile-back text-end">Back<i class="fa fa-angle-right ps-2"
                                                                                      aria-hidden="true"></i></div>
                                         </li>
-                                        <li><a href="#">Home</a></li>
-                                        <li><a href="#">shop</a></li>
+                                        <li><a href="{% url 'website:home' %}">Home</a></li>
+                                        <li><a href="{% url 'website:store' %}">Store</a></li>
                                         <li><a href="#">product</a></li>
                                         <li><a href="#">pages</a></li>
                                         <li><a href="#">blog</a></li>
