DESIGN: design updates

--- a/src/website/templates/website/home.html
+++ b/src/website/templates/website/home.html
@@ -8,12 +8,12 @@
         <div class="slide-1 home-slider">
             <div>
                 <div class="home text-center p-center">
-                    <img src="{% static 'website/images/home-banner/41.jpg' %}" alt="" class="bg-img blur-up lazyload">
+                    <img src="{% static 'website/bg/slider2.jpg' %}" alt="" class="bg-img blur-up lazyload">
                 </div>
             </div>
             <div>
                 <div class="home text-center p-center">
-                    <img src="{% static 'website/images/home-banner/42.jpg' %}" alt="" class="bg-img blur-up lazyload">
+                    <img src="{% static 'website/bg/slider1.jpg' %}" alt="" class="bg-img blur-up lazyload">
                 </div>
             </div>
         </div>
@@ -102,7 +102,7 @@
                                         <div class="img-wrapper">
                                             <div class="front">
                                                 <a href="#"><img
-                                                        src="{% static 'website/images/game/pro/11.jpg' %}"
+                                                        src="{% static 'website/products/1.jpg' %}"
                                                         class="img-fluid bg-img blur-up lazyload" alt=""></a>
                                             </div>
                                             <div class="cart-info cart-wrap">
@@ -140,7 +140,7 @@
                                             </div>
                                             <div class="front">
                                                 <a href="#"><img
-                                                        src="{% static 'website/images/game/pro/12.jpg' %}"
+                                                        src="{% static 'website/products/2.jpg' %}"
                                                         class="img-fluid bg-img blur-up lazyload" alt=""></a>
                                             </div>
                                             <div class="cart-info cart-wrap">
@@ -176,7 +176,7 @@
                                         <div class="img-wrapper">
                                             <div class="front">
                                                 <a href="#"><img
-                                                        src="{% static 'website/images/game/pro/13.jpg' %}"
+                                                        src="{% static 'website/products/3.png' %}"
                                                         class="img-fluid bg-img blur-up lazyload" alt=""></a>
                                             </div>
                                             <div class="cart-info cart-wrap">
@@ -218,7 +218,7 @@
                                             </div>
                                             <div class="front">
                                                 <a href="#"><img
-                                                        src="{% static 'website/images/game/pro/14.jpg' %}"
+                                                        src="{% static 'website/products/4.jpg' %}"
                                                         class="img-fluid bg-img blur-up lazyload" alt=""></a>
                                             </div>
                                             <div class="cart-info cart-wrap">
@@ -256,7 +256,7 @@
                                             </div>
                                             <div class="front">
                                                 <a href="#"><img
-                                                        src="{% static 'website/images/game/pro/15.jpg' %}"
+                                                        src="{% static 'website/products/5.png' %}"
                                                         class="img-fluid bg-img blur-up lazyload" alt=""></a>
                                             </div>
                                             <div class="cart-info cart-wrap">
@@ -290,7 +290,7 @@
                                         <div class="img-wrapper">
                                             <div class="front">
                                                 <a href="#"><img
-                                                        src="{% static 'website/images/game/pro/16.jpg' %}"
+                                                        src="{% static 'website/products/1.jpg' %}"
                                                         class="img-fluid bg-img blur-up lazyload" alt=""></a>
                                             </div>
                                             <div class="cart-info cart-wrap">
@@ -330,7 +330,7 @@
                                             </div>
                                             <div class="front">
                                                 <a href="#"><img
-                                                        src="{% static 'website/images/game/pro/17.jpg' %}"
+                                                        src="{% static 'website/products/2.jpg' %}"
                                                         class="img-fluid bg-img blur-up lazyload" alt=""></a>
                                             </div>
                                             <div class="cart-info cart-wrap">
@@ -364,45 +364,7 @@
                                         <div class="img-wrapper">
                                             <div class="front">
                                                 <a href="#"><img
-                                                        src="{% static 'website/images/game/pro/18.jpg' %}"
-                                                        class="img-fluid bg-img blur-up lazyload" alt=""></a>
-                                            </div>
-                                            <div class="cart-info cart-wrap">
-                                                <a href="javascript:void(0)" title="Add to Wishlist"><i class="ti-heart"
-                                                                                                        aria-hidden="true"></i></a>
-                                                <a href="#" data-bs-toggle="modal" data-bs-target="#quick-view"
-                                                   title="Quick View"><i class="ti-search" aria-hidden="true"></i></a>
-                                                <a href="#" title="Compare"><i class="ti-reload"
-                                                                                          aria-hidden="true"></i></a>
-                                            </div>
-                                            <div class="add-button" data-bs-toggle="modal" data-bs-target="#addtocart">
-                                                add to
-                                                cart
-                                            </div>
-                                        </div>
-                                        <div class="product-detail">
-                                            <div class="rating">
-                                                <i class="fa fa-star"></i>
-                                                <i class="fa fa-star"></i>
-                                                <i class="fa fa-star"></i>
-                                                <i class="fa fa-star"></i>
-                                                <i class="fa fa-star"></i>
-                                            </div>
-                                            <a href="#">
-                                                <h6>Slim Fit Cotton Shirt</h6>
-                                            </a>
-                                            <h4>$500.00</h4>
-                                        </div>
-                                    </div>
-                                    <div class="product-box">
-                                        <div class="img-wrapper">
-                                            <div class="lable-block">
-                                                <span class="lable3">new</span>
-                                                <span class="lable4">on sale</span>
-                                            </div>
-                                            <div class="front">
-                                                <a href="#"><img
-                                                        src="{% static 'website/images/game/pro/19.jpg' %}"
+                                                        src="{% static 'website/products/3.png' %}"
                                                         class="img-fluid bg-img blur-up lazyload" alt=""></a>
                                             </div>
                                             <div class="cart-info cart-wrap">
@@ -440,7 +402,45 @@
                                             </div>
                                             <div class="front">
                                                 <a href="#"><img
-                                                        src="{% static 'website/images/game/pro/23.jpg' %}"
+                                                        src="{% static 'website/products/4.jpg' %}"
+                                                        class="img-fluid bg-img blur-up lazyload" alt=""></a>
+                                            </div>
+                                            <div class="cart-info cart-wrap">
+                                                <a href="javascript:void(0)" title="Add to Wishlist"><i class="ti-heart"
+                                                                                                        aria-hidden="true"></i></a>
+                                                <a href="#" data-bs-toggle="modal" data-bs-target="#quick-view"
+                                                   title="Quick View"><i class="ti-search" aria-hidden="true"></i></a>
+                                                <a href="#" title="Compare"><i class="ti-reload"
+                                                                                          aria-hidden="true"></i></a>
+                                            </div>
+                                            <div class="add-button" data-bs-toggle="modal" data-bs-target="#addtocart">
+                                                add to
+                                                cart
+                                            </div>
+                                        </div>
+                                        <div class="product-detail">
+                                            <div class="rating">
+                                                <i class="fa fa-star"></i>
+                                                <i class="fa fa-star"></i>
+                                                <i class="fa fa-star"></i>
+                                                <i class="fa fa-star"></i>
+                                                <i class="fa fa-star"></i>
+                                            </div>
+                                            <a href="#">
+                                                <h6>Slim Fit Cotton Shirt</h6>
+                                            </a>
+                                            <h4>$500.00</h4>
+                                        </div>
+                                    </div>
+                                    <div class="product-box">
+                                        <div class="img-wrapper">
+                                            <div class="lable-block">
+                                                <span class="lable3">new</span>
+                                                <span class="lable4">on sale</span>
+                                            </div>
+                                            <div class="front">
+                                                <a href="#"><img
+                                                        src="{% static 'website/products/5.png' %}"
                                                         class="img-fluid bg-img blur-up lazyload" alt=""></a>
                                             </div>
                                             <div class="cart-info cart-wrap">
@@ -1610,13 +1610,13 @@
     <!-- Parallax section start -->
     <section class="p-0 game-parallax effect-cls ">
         <div class="full-banner parallax text-center p-center text-center">
-            <img src="{% static 'website/images/parallax/20.jpg' %}" alt="" class="bg-img blur-up lazyload">
+            <img src="{% static 'website/bg/middle.jpg' %}" alt="" class="bg-img blur-up lazyload">
             <div class="container">
                 <div class="row">
                     <div class="col">
                         <div class="banner-contain">
-                            <h2>2019</h2>
-                            <h3>xbox games</h3>
+                            <h2>2023</h2>
+                            <h3>Novels and Comics</h3>
                             <h4>special offer</h4>
                         </div>
                     </div>
@@ -1656,7 +1656,7 @@
                             <div class="img-wrapper">
                                 <div class="front">
                                     <a href="#"><img
-                                            src="{% static 'website/images/game/pro/16.jpg' %}"
+                                            src="{% static 'website/products/1.jpg' %}"
                                             class="img-fluid bg-img blur-up lazyload" alt=""></a>
                                 </div>
                                 <div class="cart-info cart-wrap">
@@ -1690,7 +1690,7 @@
                             <div class="img-wrapper">
                                 <div class="front">
                                     <a href="#"><img
-                                            src="{% static 'website/images/game/pro/11.jpg' %}"
+                                            src="{% static 'website/products/2.jpg' %}"
                                             class="img-fluid bg-img blur-up lazyload" alt=""></a>
                                 </div>
                                 <div class="cart-info cart-wrap">
@@ -1726,7 +1726,7 @@
                                 </div>
                                 <div class="front">
                                     <a href="#"><img
-                                            src="{% static 'website/images/game/pro/12.jpg' %}"
+                                            src="{% static 'website/products/3.png' %}"
                                             class="img-fluid bg-img blur-up lazyload" alt=""></a>
                                 </div>
                                 <div class="cart-info cart-wrap">
@@ -1760,7 +1760,7 @@
                             <div class="img-wrapper">
                                 <div class="front">
                                     <a href="#"><img
-                                            src="{% static 'website/images/game/pro/1.jpg' %}"
+                                            src="{% static 'website/products/4.jpg' %}"
                                             class="img-fluid bg-img blur-up lazyload" alt=""></a>
                                 </div>
                                 <div class="cart-info cart-wrap">
@@ -1796,7 +1796,7 @@
                                 </div>
                                 <div class="front">
                                     <a href="#"><img
-                                            src="{% static 'website/images/game/pro/2.jpg' %}"
+                                            src="{% static 'website/products/5.png' %}"
                                             class="img-fluid bg-img blur-up lazyload" alt=""></a>
                                 </div>
                                 <div class="cart-info cart-wrap">
