--- a/templates/website/include/header.html
+++ b/templates/website/include/header.html
@@ -9,7 +9,7 @@
                     <div class="header-contact">
                         <ul>
                             <li>Welcome to Monogatari</li>
-                            <li><i class="fa fa-phone" aria-hidden="true"></i>Call Us: 123 - 456 - 7890</li>
+                            <li><i class="fa fa-phone" aria-hidden="true"></i>Call Us: 111 - 111 - 1111</li>
                         </ul>
                     </div>
                 </div>
@@ -36,8 +36,8 @@
                     <div class="menu-left">
                         <div class="brand-logo">
                             <a href="/">
-                                <img src="{% static 'website/images/icon/logo.png' %}"
-                                     class="img-fluid blur-up lazyload" alt="">
+                                <img src="{% static 'website/logos/logo-dark.png' %}"
+                                     height="75" class="blur-up lazyload" alt="">
                             </a>
                         </div>
                     </div>
