--- a/templates/website/include/footer.html
+++ b/templates/website/include/footer.html
@@ -2,7 +2,7 @@
 
 <!-- footer -->
 <footer class="bg-img-gym overlay-cls effect-cls footer-effect">
-    <img src="{% static 'website/images/parallax/27.jpg' %}" alt="" class="bg-img blur-up lazyload">
+    <img src="{% static 'website/bg/bottom.jpg' %}" alt="" class="bg-img blur-up lazyload">
     <div class="dark-layout">
         <div class="container">
             <section class="section-b-space border-b">
@@ -13,7 +13,7 @@
                         </div>
                         <div class="footer-contant">
                             <div class="footer-logo">
-                                <img src="{% static 'website/images/icon/footerlogo.png' %}" alt="">
+                                <img src="{% static 'website/logos/logo-dark.png' %}" height="100" alt="">
                             </div>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                                 incididunt ut labore et.Lorem ipsum dolor sit amet, consectetur adipiscing</p>
@@ -37,10 +37,10 @@
                         </div>
                         <div class="footer-contant">
                             <ul class="contact-details">
-                                <li>Multikart Demo Store, Demo store India 345-659</li>
-                                <li>Call Us: 123-456-7898</li>
-                                <li>Email Us: <a href="#">Support@Fiot.com</a></li>
-                                <li>Fax: 123456</li>
+                                <li>Office 4kc, Multi monogatari Novels and Comics Store</li>
+                                <li>Call Us: 111-111-1111</li>
+                                <li>Email Us: <a href="#">Support@monogatari.com</a></li>
+                                <li>Fax: 01010101</li>
                             </ul>
                         </div>
                     </div>
@@ -77,8 +77,9 @@
             <div class="row">
                 <div class="col-xl-6 col-md-6 col-sm-12">
                     <div class="footer-end">
-                        <p><i class="fa fa-copyright" aria-hidden="true"></i> 2017-18 themeforest powered by
-                            pixelstrap</p>
+                        <p><i class="fa fa-copyright" aria-hidden="true"></i> All Rights reserved - &copy; copyright
+                            2023 - {% now 'Y' %} - Developed and Designed by <a href="https://exarth.com/" class="text-danger">Exarth</a>
+                        </p>
                     </div>
                 </div>
                 <div class="col-xl-6 col-md-6 col-sm-12">
