--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'website/base.html' %}
 
 {% load i18n %}
 {% load account socialaccount %}
@@ -9,41 +9,33 @@
 {% block subtitle %}Login Now{% endblock %}
 
 
-{% block only-body %}
-
-    {# HOME LINK #}
-    <div class="home-btn d-none d-sm-block">
-        <a href="/" class="text-dark"><i class="fas fa-home h2"></i></a>
-    </div>
-
-    <div class="account-pages my-5 pt-sm-5">
+{% block content %}
+<div class="breadcrumb-section">
         <div class="container">
-            <div class="row justify-content-center">
-                <div class="col-md-8 col-lg-6 col-xl-5">
-                    <div class="card overflow-hidden">
-                        <div class="bg-soft-primary">
-                            <div class="row">
-                                <div class="col-7">
-                                    <div class="text-primary p-4">
-                                        <h5 class="text-primary">Welcome Back !</h5>
-                                        <p>Sign in to <b>Continue</b>.</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="card-body pt-0">
-                            <div>
-                                <a href="">
-                                    <div class="avatar-md profile-user-wid mb-4">
-                                            <span class="avatar-title rounded-circle bg-light">
-                                                <img src="{% static 'admin/images/logos/logo-red.png' %}" alt=""
-                                                     class="rounded-circle"
-                                                     height="45">
-                                            </span>
-                                    </div>
-                                </a>
-                            </div>
-                            <div class="p-2">
+            <div class="row">
+                <div class="col-sm-6">
+                    <div class="page-title">
+                        <h2>customer's login</h2>
+                    </div>
+                </div>
+                <div class="col-sm-6">
+                    <nav aria-label="breadcrumb" class="theme-breadcrumb">
+                        <ol class="breadcrumb">
+                            <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+                            <li class="breadcrumb-item active">login</li>
+                        </ol>
+                    </nav>
+                </div>
+            </div>
+        </div>
+    </div>
+<section class="login-page section-b-space">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6">
+                    <h3>Login</h3>
+                    <div class="theme-card">
+                                                        <div class="p-2">
                                 {#                            <h1>{% trans "Sign In" %}</h1>#}
                                 {% get_providers as socialaccount_providers %}
 
@@ -74,6 +66,7 @@
                                 <form class="login" id="login_form" method="POST" action="{% url 'account_login' %}">
 
                                     {% csrf_token %}
+
                                     {{ form|crispy }}
                                     {% if redirect_field_value %}
                                         <input type="hidden" name="{{ redirect_field_name }}"
@@ -81,11 +74,15 @@
                                     {% endif %}
 
                                     <div class="mt-3">
-                                        <button class="btn btn-success btn-block waves-effect waves-light"
+                                        <button class="btn btn-solid btn-block"
                                                 type="submit">Log In
                                         </button>
                                     </div>
                                 </form>
+                                                                     <div class=" mt-4 text-center">
+                                    <a href="{% url 'account_reset_password' %}" class="text-muted"><i
+                                            class="mdi mdi-lock mr-1"></i> Forgot your password?</a>
+                                </div>
                                 {% if socialaccount_providers %}
                                     <hr>
                                     <ul class="list-unstyled">
@@ -117,19 +114,22 @@
                                     </ul>
                                 {% endif %}
 
-                                <div class="mt-4 text-center">
-                                    <a href="{% url 'account_reset_password' %}" class="text-muted"><i
-                                            class="mdi mdi-lock mr-1"></i> Forgot your password?</a>
-                                </div>
+
                             </div>
 
-                        </div>
-                    </div>
 
+                    </div>
+                </div>
+                <div class="col-lg-6 right-login">
+                    <h3>New Customer</h3>
+                    <div class="theme-card authentication-right">
+                        <h6 class="title-font">Create A Account</h6>
+                        <p>Sign up for a free account at our store. Registration is quick and easy. It allows you to be
+                            able to order from our shop. To start shopping click register.</p><a href="{% url 'account_signup' %}" class="btn btn-solid">Create an Account</a>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-
+    </section>
 {% endblock %}
 
