--- a/templates/account/password_reset.html
+++ b/templates/account/password_reset.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'website/base.html' %}
 {% load static %}
 
 {% load i18n %}
@@ -9,7 +9,7 @@
 {% block title %}{% trans "Password Reset" %}{% endblock %}
 
 {% block base_top_nav %}{% endblock %}
-{% block dont_include_details %}
+{% block content %}
 
     <div class="my-4 row justify-content-center">
         <div class="col-11 col-sm-8">
@@ -26,11 +26,14 @@
                     <p class="card-title m-0">{% trans "Password Reset" %}</p>
 
                 </div>
-                <div class="card-body">
-                    <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
+                <div class="card-body theme-card">
+                    <form method="POST" action="{% url 'account_reset_password' %}" class="theme-form">
                         {% csrf_token %}
+                        <div class="form-group">
                         {{ form|crispy }}
-                        <input type="submit" class="btn btn-primary" value="{% trans 'Reset My Password' %}"/>
+
+                        </div>
+                        <input type="submit" class="btn btn-solid" value="{% trans 'Reset My Password' %}"/>
                     </form>
 
                     <p class="mt-2">Please contact us if you have any trouble resetting your
